<resources>
    <string name="app_name">btw haHAA</string>
    <string name="birthday_label">Your Birthday</string>
    <string name="ref_date_label">Current Date</string>
    <string name="birthday_editor_id">birthday_editor</string>
    <string name="ref_date_editor_id">ref_date_editor</string>
    <string name="picker_label">Choose...</string>
    <string name="send_text_label">Text</string>
    <string name="send_email_label">Email</string>
    <string name="send_twitch_label">Twitch</string>
    <string name="send_facebook_label">FB</string>
    <string name="send_twitter_label">Twitter</string>
    <string name="exit_label">Exit</string>
    <string name="function_label">Choose a Function</string>
    <string name="ident_label">x</string>
    <string name="square_label">x^2</string>
    <string name="cube_label">x^3</string>
    <string name="sqrt_label">sqrt(x)</string>
    <string name="cbrt_label">x^(1/3)</string>
    <string name="exp_label">e^x</string>
    <string name="exp2_label">2^x</string>
    <string name="exp12_label">12^x</string>
    <string name="ln_label">ln(x)</string>
    <string name="log2_label">log2(x)</string>
    <string name="recip_label">12/x</string>
    <string name="tan_label">tan(x)</string>
    <string name="asin_label">arcsin(x)</string>
    <string name="acos_label">arccos(x)</string>
    <string name="atan_label">arctan(x)</string>
    <string name="date_parse_error">That\'s not a date LUL</string>
    <string name="negative_age_error">You\'re not born yet LUL</string>
    <string name="young_age_error">You\'re too young BabyRage</string>
    <string name="missing_function_error">Need to pick a function btw haHAA</string>
    <string name="oauth">oauth:sdpolw4rfhrckr9qq6fmdyykuifkuo</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">ybdDgDv8r4ffjDke21PrJbaNe</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">fJHELmiLR2pJQPWYaWwQPdFGo5SjVh5Jw7i9CdnDdEvcnrYTfe</string>
    <string name="has_errors">Fix your errors first LUL</string>
    <string name="email_need_setup">Not having email set up in 2016 LUL</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="coming_soon">Coming soon...hopefully Jebaited</string>
    <string name="fb_confirm">Message copied. Press Paste to paste your message once you log in to Facebook btw haHAA</string>
</resources>
