<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tiles"
    tools:context="com.unnamedgreencompany.btwhahaa.MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday_label"
        android:background="@color/colorBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/ref_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ref_date_label"
        android:background="@color/colorBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_editor"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/birthday_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/picker_label"
        android:tag="@string/birthday_editor_id"
        app:layout_constraintBottom_toBottomOf="@+id/birthday_editor"
        app:layout_constraintLeft_toRightOf="@id/birthday_editor"
        app:layout_constraintTop_toTopOf="@id/birthday_editor"
    />

    <Button
        android:id="@+id/ref_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/picker_label"
        android:tag="@string/ref_date_editor_id"
        app:layout_constraintBottom_toBottomOf="@+id/ref_date_editor"
        app:layout_constraintLeft_toRightOf="@id/ref_date_editor"
        app:layout_constraintTop_toTopOf="@id/ref_date_editor"
        app:layout_constraintVertical_bias="0.592" />

    <EditText
        android:id="@+id/birthday_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorBackground"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_label"
        tools:layout_editor_absoluteY="67dp"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/ref_date_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorBackground"
        android:ems="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_date_label"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/function_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorBackground"
        android:text="@string/function_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_date_editor"
        tools:layout_editor_absoluteY="178dp" />

    <com.unnamedgreencompany.btwhahaa.RadioGrid
        android:id="@+id/functions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/function_label"
        app:layout_constraintVertical_bias="0.056">

        <TableRow>

            <RadioButton
                android:id="@+id/fun_ident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ident_label" />

            <RadioButton
                android:id="@+id/fun_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp_label" />

            <RadioButton
                android:id="@+id/fun_recip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recip_label" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/fun_square"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/square_label" />

            <RadioButton
                android:id="@+id/fun_exp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp2_label" />

            <RadioButton
                android:id="@+id/fun_tan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tan_label" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/fun_cube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cube_label" />

            <RadioButton
                android:id="@+id/fun_exp12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp12_label" />

            <RadioButton
                android:id="@+id/fun_atan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atan_label" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/fun_sqrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sqrt_label" />

            <RadioButton
                android:id="@+id/fun_ln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ln_label" />

            <RadioButton
                android:id="@+id/fun_asin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asin_label" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/fun_cbrt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbrt_label" />

            <RadioButton
                android:id="@+id/fun_log2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log2_label" />

            <RadioButton
                android:id="@+id/fun_acos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acos_label" />
        </TableRow>

    </com.unnamedgreencompany.btwhahaa.RadioGrid>

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendText"
        android:text="@string/send_text_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/emailButton"
        app:layout_constraintTop_toBottomOf="@+id/functions"
        tools:layout_editor_absoluteY="357dp" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="sendEmail"
        android:text="@string/send_email_label"
        app:layout_constraintLeft_toRightOf="@+id/textButton"
        app:layout_constraintRight_toLeftOf="@+id/twitchButton"
        app:layout_constraintTop_toBottomOf="@+id/functions"
        tools:layout_editor_absoluteY="445dp" />

    <Button
        android:id="@+id/twitchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="spamTwitch"
        android:text="@string/send_twitch_label"
        app:layout_constraintLeft_toRightOf="@+id/emailButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/functions"
        tools:layout_editor_absoluteY="445dp" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:onClick="shareOnFacebook"
        android:text="@string/send_facebook_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/twitterButton"
        app:layout_constraintTop_toBottomOf="@+id/textButton"
        tools:layout_editor_absoluteY="445dp" />

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitterLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="shareOnTwitter"
        android:text="@string/send_twitter_label"
        app:layout_constraintLeft_toRightOf="@+id/facebookButton"
        app:layout_constraintRight_toLeftOf="@+id/exitButton"
        app:layout_constraintTop_toBottomOf="@+id/emailButton"
        tools:layout_editor_absoluteY="445dp" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:onClick="exit"
        android:text="@string/exit_label"
        app:layout_constraintLeft_toRightOf="@+id/twitterButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitchButton"
        tools:layout_editor_absoluteY="445dp" />

</android.support.constraint.ConstraintLayout>
